--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "path": "^0.12.7",
+    "react-facebook-login": "^4.1.1",
     "socket.io": "^2.3.0"
   }
 }
